--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,7 @@
     {% set isUser = app.user.roles[0]=="ROLE_USER" %}
 {% endif %}
 {# Fin de Verificacion #}
+{% spaceless %}
 <!DOCTYPE html>
 <html>
 	<head>
@@ -56,3 +57,5 @@
 		{% endblock %}        
 	</body>
 </html>
+{% endspaceless %}
+
