--- a/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -22,7 +22,10 @@
     <div class="form-group">
         <label class="col-sm-2 col-md-6 control-label">Rol</label>
         <div class="col-sm-10 col-md-6">
-            <p class="form-control-static">{{ user.roles[0] }}</p>
+            {% for role in user.roles %}
+            <p class="form-control-static">{{ role }}</p>
+            {% endfor %}
+            }
         </div>
     </div>
     <div class="form-group">
