--- a/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
@@ -28,7 +28,12 @@
                 
     {{ form_rest(form) }}
     {{ form_end(form, {'render_rest': false}) }}
-    <span ng-show="isInvalid()">Seleccione uno filtro ó ingrese palabra o frase</span>
+    
+    q[[ search['search[q]'].$error ]]
+    desde[[ search['search[desde]'].$error ]]
+    hasta[[ search['search[hasta]'].$error ]]
+    escuela[[ search['search[escuela]'].$error ]]
+    <span ng-show="isTouched()">Seleccione uno filtro ó ingrese palabra o frase</span>
 </div>
 {% endif %} 
 
