--- a/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
@@ -25,7 +25,7 @@
                     <li role="separator" class="divider"></li>
                 <li class="dropdown"><a href="{{ path('teg_new') }}"><i class="fa fa-plus fa-lg"></i>&nbsp;Agregar</a></li>
                     {% endif %}
-                    {% if isUser %}
+                    {% if isEstudiante %}
                     <li role="separator" class="divider"></li>
                     <li><a href="{{ path('teg_my') }}"><i class="fa fa-book fa-lg"></i>&nbsp;Mi TEG</a></li>
                     {% endif %}
